devops/kubernetes/projetos/webapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deploy
  namespace: app-lab
  labels:
    app: deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: deploy
  template:
    metadata:
      labels:
        app: deploy
    spec:
      containers:
      - name: deploy
        image: kodekloud/webapp-color:v3
        ports:
        -  containerPort: 80
