devops/kubernetes/projetos/webapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: app-lab
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: deploy
    type: ClusterIP
